# cau-notice-bot

./: .cursorignore  .gcloudignore  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: bot_service.py  main.py  notice_check.py  notice_service.py
tests/: api_test.py  connection_test.py  crawling_test.py  date_format_test.py  test_api.py  test_check_notices.py  test_main_local.py  test_notice_check.py  test_telegram_connection.py
